--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <li><a href="#" class="reset-button" data-language="pl">Polish</a></li>
                       </ul>
                     </li>
-                    <li><a href="https://github.com/siemanko/words/"><tt>Source</tt></a></li>
+                    <li><a href="https://github.com/Nthakur20/words/"><tt>Source</tt></a></li>
                     <li><a href="https://www.patreon.com/words2">Donate</a></li>
 
                     <li><a href="https://siemanko.github.io/words2/"><i>Words 2.0<i> <span class="badge">new</span></a></li>
