--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-header">
-                <span class="navbar-brand">Happy Birthday&nbsp;<small class="hidden-xs hidden-sm">Shreya</small></span>
+                <span class="navbar-brand">Happy Birthday Shreya&nbsp;<small class="hidden-xs hidden-sm"></small></span>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
