--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li><a href="https://github.com/Nthakur20/words/"><tt>Source</tt></a></li>
                     <li><a href="https://www.patreon.com/words2">Donate</a></li>
 
-                    <li><a href="https://siemanko.github.io/words2/"><i>Words 2.0<i> <span class="badge">new</span></a></li>
+                    <li><a href="https://siemanko.github.io/words2/"><i>Made with<i> <span class="badge">❤ by Nandan</span></a></li>
                 </ul>
                 <form class="navbar-form navbar-right" style="margin-right:10px;">
                   <div class="form-group" data-toggle="tooltip" data-placement="bottom" title="Type this on a different device to get the same game">
