--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                       </ul>
                     </li>
                     <li><a href="https://github.com/Nthakur20/words/"><tt>Source</tt></a></li>
-                    <li><a href="https://www.patreon.com/words2">Donate</a></li>
+                    <li><a href="https://happybirthdayshreya.yolasite.com">Donate</a></li>
 
-                    <li><a href="https://siemanko.github.io/words2/"><i>Made with<i> <span class="badge">❤ &nbsp by Nandan</span></a></li>
+                    <li><a href="https://happybirthdayshreya.yolasite.com"><i>Made with<i> <span class="badge">❤ &nbsp by Nandan</span></a></li>
                 </ul>
                 <form class="navbar-form navbar-right" style="margin-right:10px;">
                   <div class="form-group" data-toggle="tooltip" data-placement="bottom" title="Type this on a different device to get the same game">
